# parlitesc

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
PLSC/: CMakeLists.txt
PLSC/GL/: CMakeLists.txt
PLSC/GL/PLSC/: GL.hpp  ParticleInstancer.hpp  Renderer.hpp  ShapeDefinitions.hpp
PLSC/include/: PLSC.hpp
PLSC/include/PLSC/: Constants.hpp  Definition.hpp  Functional.hpp  Settings.hpp  SettingsCpp11.hpp  Typedefs.hpp
PLSC/include/PLSC/DBG/: Profile.hpp
PLSC/include/PLSC/Math/: Util.hpp  vec2.hpp
PLSC/include/PLSC/Physics/: Collider.hpp  Collision.hpp  Particle.hpp  RadiusGrid.hpp  Solver.hpp  Static.hpp
PLSC/src/: Profile.cpp  RadiusGrid.cpp  Solver.cpp
PLSCGL/: CMakeLists.txt  PLSCGL.hpp  ParticleInstancer.hpp  Shader.hpp  ShaderSources.hpp  ShapeDefinitions.hpp
examples/: CMakeLists.txt  galton-headless.cpp  galton.cpp  headless.cpp
examples/libdemo/: CMakeLists.txt  Window.hpp
include/: PLSC.hpp
include/Math/: MathUtil.hpp
include/PLSC/: Typedefs.hpp
include/PLSC/Math/: MathUtil.hpp
include/PLSC/Physics/: Solver.hpp  Static.hpp
include/PLSC/Util/: Typedefs.hpp
include/Util/: Typedefs.hpp
src/: CMakeLists.txt  PLSC.cpp  Profile.cpp  Solver.cpp
