cmake_minimum_required(VERSION 3.14)

project(LIBPLSC
        VERSION 0.1
        LANGUAGES CXX)

# PLSC::PLSC
file(GLOB_RECURSE HEADER_LIST CONFIGURE_DEPENDS "${LIBPLSC_SOURCE_DIR}/include/*.h*")
file(GLOB_RECURSE SOURCE_LIST CONFIGURE_DEPENDS "${LIBPLSC_SOURCE_DIR}/src/*.c*")

add_library(LIBPLSC ${SOURCE_LIST} ${HEADER_LIST})
target_include_directories(LIBPLSC PUBLIC "${LIBPLSC_SOURCE_DIR}/include")

# PLSC::GL
find_package(OpenGL REQUIRED)

file(GLOB PLSC_GL_HEADER_LIST CONFIGURE_DEPENDS "${LIBPLSC_SOURCE_DIR}/GL/PLSC/*.h*")

add_library(LIBPLSCGL STATIC "${LIBPLSC_SOURCE_DIR}/GL/PLSC/dummy.cpp" ${PLSC_GL_HEADER_LIST})
target_include_directories(LIBPLSCGL PUBLIC "${LIBPLSC_SOURCE_DIR}/GL")
target_link_libraries(LIBPLSCGL PUBLIC LIBPLSC ${OPENGL_LIBRARIES})

# Alias
add_library(PLSC::PLSC ALIAS LIBPLSC)
add_library(PLSC::GL ALIAS LIBPLSCGL)