cmake_minimum_required(VERSION 3.14)

project(LIBPLSC
        VERSION 0.1
        LANGUAGES CXX)

# PLSC::PLSC
file(GLOB_RECURSE HEADER_LIST CONFIGURE_DEPENDS "${LIBPLSC_SOURCE_DIR}/include/*.h*")

add_library(LIBPLSC INTERFACE ${HEADER_LIST})
target_include_directories(LIBPLSC INTERFACE "${LIBPLSC_SOURCE_DIR}/include")

set_target_properties(LIBPLSC PROPERTIES CXX_STANDARD 20)
# PLSC::GL
find_package(OpenGL REQUIRED)

file(GLOB PLSC_GL_HEADER_LIST CONFIGURE_DEPENDS "${LIBPLSC_SOURCE_DIR}/GL/PLSC/*.h*")

add_library(LIBPLSCGL INTERFACE ${PLSC_GL_HEADER_LIST})
target_include_directories(LIBPLSCGL INTERFACE "${LIBPLSC_SOURCE_DIR}/GL")
target_link_libraries(LIBPLSCGL INTERFACE LIBPLSC ${OPENGL_LIBRARIES})

# Alias
add_library(PLSC::PLSC ALIAS LIBPLSC)
add_library(PLSC::GL ALIAS LIBPLSCGL)