cmake_minimum_required(VERSION 3.14)

project(PLSCGL VERSION 0.1 LANGUAGES CXX)

# Depends
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)

file(GLOB PLSC_GL_HEADER_LIST CONFIGURE_DEPENDS "${PLSCGL_SOURCE_DIR}/PLSC/*.hpp")

add_library(LIBPLSCGL STATIC "${PLSCGL_SOURCE_DIR}/PLSC/dummy.cpp" ${PLSC_GL_HEADER_LIST})
target_include_directories(LIBPLSCGL PUBLIC "${PLSCGL_SOURCE_DIR}")
target_link_libraries(LIBPLSCGL PRIVATE ${OPENGL_LIBRARIES} LIBPLSC)

# Alias
add_library(PLSC::GL ALIAS LIBPLSCGL)